--- a/package.json
+++ b/package.json
@@ -1,1 +1,23 @@
-{}
+{
+  "name": "fileshare",
+  "description": "Simple file sharing web app with drag and drop file upload",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/himanshu097/Filesharing-Frontend.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/himanshu097/Filesharing-Frontend/issues"
+  },
+  "homepage": "https://github.com/himanshu097/Filesharing-Frontend#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "vue": "^2.6.12"
+  }
+}
