--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/himanshu097/Filesharing-Frontend#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "vue": "^2.6.12"
   }
